[gd_scene load_steps=3 format=3 uid="uid://dsqbgs2fjjk4a"]

[ext_resource type="Script" path="res://Scenes/Ui/MainMenu.gd" id="1_fctfe"]
[ext_resource type="Theme" uid="uid://c80piyxahit8y" path="res://Scenes/Ui/button.tres" id="2_j3pew"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fctfe")

[node name="Menu" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -60.0
offset_right = 62.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
focus_neighbor_bottom = NodePath("../Options")
theme = ExtResource("2_j3pew")
text = "start"
language = "English"

[node name="Options" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Button")
theme = ExtResource("2_j3pew")
text = "options"
language = "English"

[node name="Button" type="Button" parent="Menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Exit")
theme = ExtResource("2_j3pew")
text = "leaderboard"

[node name="Exit" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
focus_neighbor_left = NodePath("../Start")
theme = ExtResource("2_j3pew")
text = "exit"
language = "en"

[node name="OptionsMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -52.0
offset_right = 45.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="OptionsMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
focus_neighbor_bottom = NodePath("../Audio")
theme = ExtResource("2_j3pew")
text = "video"
language = "English"

[node name="Audio" type="Button" parent="OptionsMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
focus_neighbor_top = NodePath("../Video")
focus_neighbor_bottom = NodePath("../HBoxContainer/OptionButton")
theme = ExtResource("2_j3pew")
text = "audio"
language = "English"

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2

[node name="Language" type="Button" parent="OptionsMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
theme = ExtResource("2_j3pew")
text = "language"
language = "English"

[node name="OptionButton" type="OptionButton" parent="OptionsMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
focus_neighbor_top = NodePath("../../Audio")
focus_neighbor_bottom = NodePath("../../BackFromOptions")
theme = ExtResource("2_j3pew")
language = "English"

[node name="BackFromOptions" type="Button" parent="OptionsMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
auto_translate = false
focus_neighbor_top = NodePath("../HBoxContainer/OptionButton")
theme = ExtResource("2_j3pew")
text = "back
"
language = "English"

[node name="VideoMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VideoMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -40.0
offset_right = 56.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="VideoMenu/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="VideoMenu/HBoxContainer/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
auto_translate = false
text = "fullscreen"
language = "English"

[node name="Borderless" type="Label" parent="VideoMenu/HBoxContainer/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
auto_translate = false
text = "borderless
"
language = "English"

[node name="VSync" type="Label" parent="VideoMenu/HBoxContainer/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
auto_translate = false
text = "VSync
"
language = "English"

[node name="Checks" type="VBoxContainer" parent="VideoMenu/HBoxContainer"]
layout_mode = 2

[node name="FullscreenCheckbox" type="CheckBox" parent="VideoMenu/HBoxContainer/Checks"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../BorderlessCheckbox")

[node name="BorderlessCheckbox" type="CheckBox" parent="VideoMenu/HBoxContainer/Checks"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../FullscreenCheckbox")
focus_neighbor_bottom = NodePath("../VSyncCheckbox")

[node name="VSyncCheckbox" type="CheckBox" parent="VideoMenu/HBoxContainer/Checks"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../BorderlessCheckbox")
focus_neighbor_bottom = NodePath("../../../BackFromVideo")

[node name="BackFromVideo" type="Button" parent="VideoMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.5
offset_top = -31.0
offset_right = 23.5
grow_horizontal = 2
grow_vertical = 0
auto_translate = false
theme = ExtResource("2_j3pew")
text = "back
"
language = "English"

[node name="AudioMenu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AudioMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.5
offset_top = -38.5
offset_right = 170.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="AudioMenu/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="AudioMenu/HBoxContainer/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
auto_translate = false
text = "master"
language = "English"

[node name="Music" type="Label" parent="AudioMenu/HBoxContainer/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
auto_translate = false
text = "music"
language = "English"

[node name="Sound FX" type="Label" parent="AudioMenu/HBoxContainer/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
auto_translate = false
text = "sound FX"
language = "English"

[node name="Slider" type="VBoxContainer" parent="AudioMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AudioMenu/HBoxContainer/Slider"]
layout_mode = 2

[node name="MasterBar" type="HSlider" parent="AudioMenu/HBoxContainer/Slider/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_bottom = NodePath("../../HBoxContainer2/MusicBar")
value = 100.0

[node name="MasterBarLabel" type="Label" parent="AudioMenu/HBoxContainer/Slider/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "10"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="AudioMenu/HBoxContainer/Slider"]
layout_mode = 2

[node name="MusicBar" type="HSlider" parent="AudioMenu/HBoxContainer/Slider/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
focus_neighbor_top = NodePath("../../HBoxContainer/MasterBar")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/Sound FXBar")
value = 100.0

[node name="MusicBarLabel" type="Label" parent="AudioMenu/HBoxContainer/Slider/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "10
"

[node name="HBoxContainer3" type="HBoxContainer" parent="AudioMenu/HBoxContainer/Slider"]
layout_mode = 2

[node name="Sound FXBar" type="HSlider" parent="AudioMenu/HBoxContainer/Slider/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
focus_neighbor_top = NodePath("../../HBoxContainer2/MusicBar")
focus_neighbor_bottom = NodePath("../../../../BackFromAudio")
value = 100.0

[node name="Sound FXBarLabel" type="Label" parent="AudioMenu/HBoxContainer/Slider/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "10"

[node name="BackFromAudio" type="Button" parent="AudioMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.5
offset_top = -31.0
offset_right = 23.5
grow_horizontal = 2
grow_vertical = 0
auto_translate = false
focus_neighbor_top = NodePath("../HBoxContainer/Slider/HBoxContainer3/Sound FXBar")
theme = ExtResource("2_j3pew")
text = "back
"
language = "English"

[node name="Leaderboard" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Leaderboard"]
self_modulate = Color(0.328687, 0.909687, 0.594753, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 300

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Leaderboard/MarginContainer/VBoxContainer"]
modulate = Color(0.834857, 0.542717, 0.547939, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="Player" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "player"

[node name="Score" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 60
text = "score"

[node name="HBoxContainer2" type="HBoxContainer" parent="Leaderboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Player1" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 45

[node name="Score1" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 45

[node name="HBoxContainer3" type="HBoxContainer" parent="Leaderboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Player2" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 45

[node name="Score2" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 45

[node name="HBoxContainer4" type="HBoxContainer" parent="Leaderboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Player3" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 45

[node name="Score3" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 45

[node name="HBoxContainer5" type="HBoxContainer" parent="Leaderboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Player4" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 45

[node name="Score4" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 45

[node name="HBoxContainer6" type="HBoxContainer" parent="Leaderboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Player5" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 45

[node name="Score5" type="Label" parent="Leaderboard/MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 45

[node name="BackFromLB" type="Button" parent="Leaderboard"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "back"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="item_selected" from="OptionsMenu/VBoxContainer/HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/BackFromOptions" to="." method="_on_back_from_options_pressed"]
[connection signal="toggled" from="VideoMenu/HBoxContainer/Checks/FullscreenCheckbox" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="VideoMenu/HBoxContainer/Checks/BorderlessCheckbox" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="VideoMenu/HBoxContainer/Checks/VSyncCheckbox" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="VideoMenu/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="AudioMenu/HBoxContainer/Slider/HBoxContainer/MasterBar" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="AudioMenu/HBoxContainer/Slider/HBoxContainer2/MusicBar" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="AudioMenu/HBoxContainer/Slider/HBoxContainer3/Sound FXBar" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="AudioMenu/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
[connection signal="pressed" from="Leaderboard/BackFromLB" to="." method="_on_back_from_lb_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
